# argos3-kilobot

./: README.md  data_file
ARGoS_simulation/: argos3  data_file
ARGoS_simulation/behaviours/: CMakeLists.txt  agent.h  agent_main.c  agent_red.c
ARGoS_simulation/experiment/: kilogrid_stub.argos
ARGoS_simulation/loop_functions/: ASB_experiment_0_100.kconf  ASB_experiment_50_50.kconf  kilogrid_stub.cpp  (+1 more)
data_generation_scripts/: create_cluster_files.sh  runjob_template.sh  runjobs.sh
job_cluster/: votermodel_0_exp_0.sh  votermodel_100_exp_0.sh  votermodel_101_exp_0.sh  votermodel_102_exp_0.sh  votermodel_103_exp_0.sh  votermodel_104_exp_0.sh  votermodel_105_exp_0.sh  votermodel_106_exp_0.sh  votermodel_107_exp_0.sh  votermodel_108_exp_0.sh  votermodel_109_exp_0.sh  votermodel_10_exp_0.sh  votermodel_110_exp_0.sh  votermodel_111_exp_0.sh  votermodel_112_exp_0.sh  votermodel_113_exp_0.sh  votermodel_114_exp_0.sh  votermodel_115_exp_0.sh  votermodel_116_exp_0.sh  votermodel_117_exp_0.sh  votermodel_118_exp_0.sh  votermodel_119_exp_0.sh  votermodel_11_exp_0.sh  votermodel_120_exp_0.sh  votermodel_121_exp_0.sh  votermodel_122_exp_0.sh  votermodel_123_exp_0.sh  votermodel_124_exp_0.sh  votermodel_125_exp_0.sh  votermodel_126_exp_0.sh  votermodel_127_exp_0.sh  votermodel_128_exp_0.sh  votermodel_129_exp_0.sh  votermodel_12_exp_0.sh  votermodel_130_exp_0.sh  votermodel_131_exp_0.sh  votermodel_132_exp_0.sh  votermodel_133_exp_0.sh  votermodel_134_exp_0.sh  votermodel_135_exp_0.sh  (+141 more)
src/examples/behaviors/: CMakeLists.txt  test_blue.c  test_debug.h  test_red.c
(+190 files in other folders)
